Fixed navigation link text align.

--- a/less/blocks/navigation/navigation.less
+++ b/less/blocks/navigation/navigation.less
@@ -38,6 +38,7 @@
         transition: 100ms;
         text-decoration: none;
         text-transform: uppercase;
+        text-align: center;
 
         color: darken(@main-color, 20%);
         border-right: 1px solid fadeout(darken(@main-color, 20%), 50%);
